--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
     Lucas JAOUEN - Portfolio.
   </title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8BLL9KWFCH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8BLL9KWFCH');
+</script>
 
 <body>
   <div id="app"></div>
