--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="./public/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
   <!-- Template Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet" />
